--- a/project/templates/editdate.html
+++ b/project/templates/editdate.html
@@ -138,7 +138,7 @@
              {{ form.savebtn(class_="btn btn-primary button_fpa") }} <button type=button name="cancel" id="cancel" class="btn btn-primary button_fpa" onclick="location.href='{{ url_for('gui_blueprint._dates') }}'">Cancel</button>
              {% if data %}
               {{ form.deletebtn(class_="btn btn-danger") }}
-              &nbsp;<button type=button name="cancel" id="cancel" class="btn btn-danger button_fpa" data-toggle="modal" data-target="#messageModalCenter">Delete</button>
+              &nbsp;<button type=button name="delete" id="delete" class="btn btn-danger button_fpa" data-toggle="modal" data-target="#messageModalCenter">Delete</button>
               {% endif %}
             </td>
           </tr>
