--- a/project/templates/dashboard.html
+++ b/project/templates/dashboard.html
@@ -5,21 +5,76 @@
 {% endblock %}
 {% block content %}
 
+<h5 class="card-header text-white bg-secondary">Dashboard</h5>
+
 <div class="container-fluid mt-3">
-  <h3>Dashboard</h3>
 
-  <div class="d-flex flex-row flex-nowrap" style="width:1280px">
-    {% for rec in data %}
-    <div class="d-flex">
+{% if is_admin() %}
+<div class="p-2 m-3 bg-light text-dark font-weight-bold">Booking Administration</div>
+<table class="table table-striped">
+  <thead class="thead-light">
+    <tr>
+      <th scope="col" class="w-25">Title</th>
+      <th scope="col">Start</th>
+      <th scope="col">End</th>
+      <th scope="col">Project</th>
+      <th scope="col">Cluster</th>
+      <th scope="col">Approved</th>
+      <th scope="col">Approved By</th>
+      <th scope="col">Logged</th>
+    </tr>
+  </thead>
+  <tbody>
+    {%- for rec in data1 -%}
+    <tr>
+      <td class="w-25">{{ rec[0] }}</td>
+      <td>{{ rec[1] }}</td>
+      <td>{{ rec[2] }}</td>
+      <td>{{ rec[3] }}</td>
+      <td>{{ rec[4] }}</td>
+      <td>{{ rec[5] }}</td>
+      <td>{{ rec[6] }}</td>
+      <td>{{ rec[7] }}</td>
+    </tr>
+    {%- endfor -%}
+    {%- if data1|length == 0 -%}
+      <tr><td colspan=8 class="alert alert-primary text-secondary">There are no bookings to view</td></tr>
+    {% endif %}
+  </tbody>
+</table>
+{% endif %}
 
-      <div class="card w-auto mx-2 border-dark text-center">
-        <div class="card-header text-white bg-info text-center">Changes</div>
-        <div class="card-body px-lg-1 pt-0">{{ rec.user_text }}</div>
-      </div>
+<div class="p-2 m-3 bg-light text-dark font-weight-bold">My Bookings</div>
+<table class="table table-striped">
+  <thead class="thead-light">
+    <tr>
+      <th scope="col" class="w-25">Title</th>
+      <th scope="col">Start</th>
+      <th scope="col">End</th>
+      <th scope="col">Project</th>
+      <th scope="col">Cluster</th>
+      <th scope="col">Approved</th>
+      <th scope="col">Approved By</th>
+      <th scope="col">Logged</th>
+    </tr>
+  </thead>
+  <tbody>
+    {%- for rec in data2 -%}
+    <tr>
+      <td class="w-25">{{ rec[0] }}</td>
+      <td>{{ rec[1] }}</td>
+      <td>{{ rec[2] }}</td>
+      <td>{{ rec[3] }}</td>
+      <td>{{ rec[4] }}</td>
+      <td>{{ rec[5] }}</td>
+      <td>{{ rec[6] }}</td>
+      <td>{{ rec[7] }}</td>
+    </tr>
+    {%- else -%}
+      <tr><td colspan=8 class="alert alert-primary text-secondary">You have no bookings to view</td></tr>
+    {%- endfor -%}
+  </tbody>
+</table>
 
-    </div>
-    {% endfor %}
-
-  </div>
 </div>
 {% endblock %}
