--- a/project/templates/complexes.html
+++ b/project/templates/complexes.html
@@ -8,7 +8,7 @@
 <div class="container-fluid mt-3">
   <h3>Complexes&nbsp;&nbsp;&nbsp;<button type="button" onclick=location.href='{{ url_for('gui_blueprint._editcomplex', id=0) }}' class="btn btn-success">Add</button></h3>
 
-  <table class="table table-striped">
+  <table class="table table-striped" id="t_complexes">
     <thead class="thead-light">
       <tr>
         <th scope="col">Complex Name</th>
@@ -30,14 +30,16 @@
         <td>{{ rec[0].complex_updated }}</td>
         <td>{{ rec[4].param_name }}</td>
       </tr>
-      {% else %}
-        <tr><td colspan=6 class="alert alert-primary"><strong>There are no complexes to view </strong></td></tr>
       {% endfor %}
 
     </tbody>
   </table>
-
-
 </div>
 
+<script>
+$(document).ready( function () {
+    $('#t_complexes').DataTable();
+} );
+
+</script>
 {% endblock %}
