--- a/project/templates/help.html
+++ b/project/templates/help.html
@@ -9,7 +9,7 @@
 
 {%- if data -%}
 
-  <table class="table table-striped">
+  <table class="table table-striped" id="t_help">
     <thead class="thead-light">
       <tr>
         <th scope="col"><h4><i class="text-primary">Help</i></h4></th>
@@ -19,7 +19,7 @@
 
       {%- for result in data -%}
         <tr>
-          <td class=""><strong>{{ result[0] }}</strong><br/>{{ result[1] }}</td>
+          <td class=""><strong>{{ result[0] }}</strong><br/>{{ result[1] | safe }}</td>
         </tr>
       {% endfor %}
 
@@ -28,5 +28,11 @@
 
 {%- endif -%}
 </div>
+
+<script>
+$(document).ready( function () {
+    $('#t_help').DataTable();
+} );
+</script>
 
 {% endblock %}
