--- a/project/templates/parameters.html
+++ b/project/templates/parameters.html
@@ -20,20 +20,18 @@
   </div>
   </form>
 
-  <table class="table table-striped">
+  <table class="table table-striped" id="t_params">
     <thead class="thead-light">
       <tr>
         <th scope="col">Name</th>
         <th scope="col">Value</th>
-        <!-- <th scope="col">Group</th> -->
         <th scope="col">Parent</th>
         <th scope="col">Disabled</th>
       </tr>
     </thead>
     <tbody>
 
-    {% if data %}
-
+{#
     <div class=pagination>
       {%- for page in data.iter_pages() %}
         {% if page %}
@@ -47,8 +45,9 @@
         {% endif %}
       {%- endfor %}
     </div>
+#}
 
-      {% for rec in data.items %}
+      {% for rec in data %}
       <tr>
         <td><a href="{{ url_for('gui_blueprint._editparameter', id=rec.id) }}">{{ rec.param_name }}</a></td>
         <td>{{ rec.param_value }}</td>
@@ -67,10 +66,8 @@
         {% endif %}
 
       </tr>
-      {% else %}
-        <tr><td colspan=5 class="alert alert-primary"><strong>There are no parameters to view </strong></td></tr>
+
       {% endfor %}
-    {% endif %}
 
     </tbody>
   </table>
@@ -78,9 +75,15 @@
 </div>
 
 <script>
+
   $('#param_groups').on('change', function() {
     $('#sel_group').submit();
   });
+
+  $(document).ready( function () {
+      $('#t_params').DataTable();
+  } );
+
 </script>
 
 {% endblock %}
