--- a/project/templates/editbooking.html
+++ b/project/templates/editbooking.html
@@ -6,17 +6,17 @@
 {% block content %}
 
 
-    {% if data %}
-    <h5 class="card-header text-white bg-secondary">Booking: "{{ form.title }}"</h5>
-    <form action="{{ url_for('gui_blueprint._editbooking', id=data.id) }}" method="POST" novalidate class="text-center">
+    {% if form.id.data > 0 %}
+    <h5 class="card-header text-white bg-secondary">Booking: "{{ form.title.data }}"</h5>
+    <form action="{{ url_for('gui_blueprint._editbooking', id=form.id.data) }}" method="POST" novalidate class="text-center">
     {% else %}
     <h5 class="card-header text-white bg-secondary">New Booking</h5>
     <form action="{{ url_for('gui_blueprint._editbooking', id=0) }}" method="POST" novalidate class="text-center">
     {% endif %}
-    <h3><span class="badge m-2 p-2 font-weight-bold badge-dark">Step 1 of 2</span></h3>
+    <!-- h3><span class="badge m-2 p-2 font-weight-bold badge-dark">Step 1 of 2</span></h3 -->
 
     {%- if form.approval_required.data == "1" -%}
-    <span class="bg-warning p-2 m-3">{{ form.approval_required.render_kw.title }}</span>
+    <div class="alert-warning p-2 m-3 font-weight-bold text-black">{{ form.approval_required.render_kw.title }}</div>
     {%- endif -%}
 
         <table class="form-group w-75 align-text-top">
@@ -97,11 +97,18 @@
           <tr>
             <td>&nbsp;</td>
             <td class="p-5">
-             {{ form.checkbtn(class_="btn btn-success button_fpa") }} <button type=button name="cancel" id="cancel" class="btn btn-primary button_fpa" onclick="location.href='{{ url_for('gui_blueprint._bookings') }}'">Cancel</button>
-             {% if data %}
+
+            {%- if form.id.data == 0 or (form.id.data > 0 and (form.owner_id == get_user() or is_admin())) -%}
+             {{ form.checkbtn(class_="btn btn-success button_fpa") }}
+            {% endif %}
+
+            <button type=button name="cancel" id="cancel" class="btn btn-primary button_fpa" onclick="location.href='{{ url_for('gui_blueprint._bookings') }}'">Cancel</button>
+
+            {% if form.id.data > 0 and (form.owner_id == get_user() or is_admin()) -%}
               {{ form.deletebtn(class_="btn btn-danger") }}
               &nbsp;<button type=button name="cancel" id="cancel" class="btn btn-danger button_fpa" data-toggle="modal" data-target="#messageModalCenter">Delete</button>
-              {% endif %}
+            {%- endif -%}
+
             </td>
           </tr>
           <tr><td>{{ form.approval_required(class_="invisible") }}</td></tr>
