--- a/project/templates/editparameter.html
+++ b/project/templates/editparameter.html
@@ -24,7 +24,7 @@
             <td class="w-75 text-right mx-2 p-1">{{ form.param_name(size=32, class_="form-control") }}</td>
           </tr>
           <tr>
-            <td class="w-25 text-right mx-2 p-1">{{ form.param_value.label }}</td>
+            <td class="w-25 text-right mx-2 p-1 align-top">{{ form.param_value.label }}</td>
             <td class="w-75 text-right mx-2 p-1">{{ form.param_value(rows=10, cols=30, class_="form-control") }}</td>
           </tr>
           <tr>
@@ -33,7 +33,7 @@
           </tr>
           <tr>
             <td class="w-25 text-right mx-2 p-1">{{ form.param_parent.label }}</td>
-            <td class="w-75 text-right mx-2 p-1">{{ form.param_parent(size=32, class_="form-control") }}</td>
+            <td class="w-75 text-right mx-2 p-1">{{ form.param_parent(class_="form-control") }}</td>
           </tr>
           <tr>
             <td class="w-25 text-right mx-2 p-1">{{ form.param_disabled.label }}</td>
