--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -78,6 +78,8 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('gui_blueprint._parameters') }}">Parameters</a>
               <a class="dropdown-item" href="{{ url_for('gui_blueprint._logs', counter=10) }}">System Logs</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{{ url_for('gui_blueprint._comms') }}">Communications</a>              
             </div>
           </li>
           {% endif %}
@@ -110,14 +112,6 @@
            </div>
          </li>
        </ul>
-
-
-        <!--
-        <form class="form-inline my-2 my-lg-0" action="/fpa/search" method="POST">
-          <input class="form-control mr-sm-2" type="text" id="query" name="query" aria-label="Query">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-        -->
 
       </div>
     </nav>
