--- a/project/templates/dashboard.html
+++ b/project/templates/dashboard.html
@@ -59,14 +59,14 @@
   <tbody>
     {%- for rec in data2 -%}
     <tr>
-      <td class="w-25">{{ rec[0] }}</td>
-      <td>{{ rec[1] }}</td>
-      <td>{{ rec[2] }}</td>
-      <td>{{ rec[3] }}</td>
-      <td>{{ rec[4] }}</td>
-      <td>{{ rec[5] }}</td>
-      <td>{{ rec[6] }}</td>
-      <td>{{ rec[7] }}</td>
+      <td class="w-25"><a href="{{ url_for('gui_blueprint._editbooking', id=rec.id) }}">{{ rec.title }}</a></td>
+      <td>{{ rec.start_dt }}</td>
+      <td>{{ rec.end_dt }}</td>
+      <td>{{ rec.project }}</td>
+      <td>{{ rec.complex }}</td>
+      <td>{{ rec.approved_date }}</td>
+      <td>{{ rec.approved_by }}</td>
+      <td>{{ rec.logged }}</td>
     </tr>
     {%- endfor -%}
   </tbody>
