--- a/project/templates/dashboard.html
+++ b/project/templates/dashboard.html
@@ -32,7 +32,7 @@
       <td>{{ rec.end_dt }}</td>
       <td>{{ rec.project }}</td>
       <td>{{ rec.complex }}</td>
-      <td><a href="{{ url_for('gui_blueprint._approvebooking', id=rec.id) }}">{{ rec.approved_date }}</td>
+      <td><a data-toggle="tooltip" data-placement="top" title="{{ rec.approval_reason }}" href="{{ url_for('gui_blueprint._approvebooking', id=rec.id) }}">{{ rec.approved_date }}</a></td>
       <td>{{ rec.approved_by }}</td>
       <td>{{ rec.logged }}</td>
     </tr>
@@ -64,8 +64,8 @@
       <td>{{ rec.end_dt }}</td>
       <td>{{ rec.project }}</td>
       <td>{{ rec.complex }}</td>
-      <td>{{ rec.approved_date }}</td>
-      <td>{{ rec.approved_by }}</td>
+      <td><span class="btn btn-secondary py-0 my-0 mx-2" data-toggle="tooltip" data-placement="top" title="{{ rec.approval_reason }}">{{ rec.approved_date }}</span></td>
+      <td>{{ rec.approved_by|replace("None", "") }}</td>
       <td>{{ rec.logged }}</td>
     </tr>
     {%- endfor -%}
