--- a/project/templates/calendar.html
+++ b/project/templates/calendar.html
@@ -85,6 +85,7 @@
         </div>
         <div class="modal-body bg-light">
           <table>
+          <tr><td class="p-1 mx-1 font-weight-bold">Owner</td><td><div id="bookingOwner"></div></td>
           <tr><td class="p-1 mx-1 font-weight-bold">Type</td><td><div id="bookingType"></div></td>
           <tr><td class="p-1 mx-1 font-weight-bold">Info</td><td><div id="bookingInfo"></div></td>
           <tr><td class="p-1 mx-1 font-weight-bold">Start</td><td><div id="bookingStart"></div></td>
